@@ -79,10 +79,17 @@
       <td>Outside Temperature (explicit unit conversion to Fahrenheit, plus formatting)</td>
       <td>50.284&#176;F</td>
     </tr>
+	<tr>
+	  <td>Outside Temperature trend (3 hrs)</td>
+	  <td>5.7&#176;C</td>
     <tr>
       <td>Barometer (normal)</td>
       <td>1042.2 mbar</td>
     </tr>
+	<tr>
+	  <td>Barometer trend (3 hrs)</td>
+	  <td>-3.6 mbar</td>
+    <tr>
     <tr>
       <td>Wind Chill (normal)</td>
       <td>   N/A</td>
