@@ -86,10 +86,17 @@
       <td>Outside Temperature (explicit unit conversion to Fahrenheit, plus formatting)</td>
       <td>$current.outTemp.degree_F.format("%.3f")</td>
     </tr>
+	<tr>
+	  <td>Outside Temperature trend ($trend.time_delta.hour.format("%.0f"))</td>
+	  <td>$trend.outTemp</td>
     <tr>
       <td>Barometer (normal)</td>
       <td>$current.barometer</td>
     </tr>
+	<tr>
+	  <td>Barometer trend ($trend.time_delta.hour.format("%.0f"))</td>
+	  <td>$trend.barometer</td>
+    <tr>
     <tr>
       <td>Wind Chill (normal)</td>
       <td>$current.windchill</td>
